# health-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: health-data.md
.claude/skills/health-data/: SKILL.md  reference.md
src/health_data/: cli.py  dates.py  formatter.py  output.py
src/health_data/sources/garmin/: auth.py  cache.py  client.py  commands.py  formatter.py
src/health_data/sources/strava/: auth.py  client.py  commands.py
tests/: test_auth.py  test_dates.py  test_formatter.py  test_garmin_auth.py  test_garmin_cache.py  test_garmin_client.py  test_garmin_commands.py  test_output.py  test_strava_auth.py  test_strava_client.py  test_strava_commands.py
