[project]
name = "health-data"
version = "0.1.0"
description = "CLI for fetching personal health data"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "garminconnect>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
health = "health_data.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
