[project]
name = "health-data"
version = "0.1.0"
description = "CLI for fetching personal health data"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "stravalib>=2.0",
    "tabulate>=0.9",
    "garminconnect>=0.3.0",
    "curl_cffi>=0.14",
    "ua-generator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
health = "health_data.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
